hotfix for go-ssb-room aliases

--- a/traefik.yml.tmpl
+++ b/traefik.yml.tmpl
@@ -60,3 +60,6 @@ certificatesResolvers:
       storage: /etc/letsencrypt/production-acme.json
       httpChallenge:
         entryPoint: web
+      dnsChallenge:
+        provider: ovh
+
