--- a/traefik.yml.tmpl
+++ b/traefik.yml.tmpl
@@ -66,3 +66,7 @@ certificatesResolvers:
       storage: /etc/letsencrypt/production-acme.json
       httpChallenge:
         entryPoint: web
+        {{ if eq (env "LETS_ENCRYPT_DNS_CHALLENGE_ENABLED") "1" }}
+        dnsChallenge:
+          provider: {{ (env "LETS_ENCRYPT_DNS_CHALLENGE_PROVIDER") }}
+        {{ end }}
